--- a/aaronrdzr/paginaweb2/pagina1.html
+++ b/aaronrdzr/paginaweb2/pagina1.html
@@ -27,7 +27,7 @@
     <footer>
         <hr>
         <small><a href="mailto:aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
-        <p><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small></p> 
+        <h3><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small> </h3>
     </footer>
 </body>
 </html>
