--- a/aaronrdzr/paginaweb2/pagina4.html
+++ b/aaronrdzr/paginaweb2/pagina4.html
@@ -22,19 +22,19 @@
         <article>
             <h2>Juegos favoritos</h2>
             <h3>Grand Theft Auto V</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/q3WWRp_uSv8?si=YBmBHDipYa6LW5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/q3WWRp_uSv8?si=EnDlrrU7Q5RwF56X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         </article>
         <article>
             <h3>FIFA</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/g24TE5-P1Is?si=HzltTYL2zrR8_Gjd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/g24TE5-P1Is?si=NDWJ_WB-sTASfMvq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </article>
     </main>
     <aside></aside>
     <footer>
         <hr>
         <small><a href="mailto:aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
-        <p><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small></p> 
+        <h3><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small> </h3>
     </footer>
 </body>
 </html>
