--- a/aaronrdzr/paginaweb2/pagina5.html
+++ b/aaronrdzr/paginaweb2/pagina5.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <header>
-            <h2>¿Porque me gusta cocinar?</h2>
-            <p>AL estar solo en casa mucho tiempo tuve la necesidad de aprender a cocinar, aunque antes me daba flojera estos ulrimos meses al probar hacer platillos diferentes le he agarrado un gusto a la cocina. </p>
+            <h2 class="cocina">¿Porque me gusta cocinar?</h2>
+            <div >AL estar solo en casa mucho tiempo tuve la necesidad de aprender a cocinar, aunque antes me daba flojera estos ulrimos meses al probar hacer platillos diferentes le he agarrado un gusto a la cocina. </div>
         </header>
 
         <img src="img/cocina.jpg" alt="Imagen de ejemplo de la cocina" width="800">
@@ -25,7 +25,7 @@
     <footer>
         <hr>
         <small><a href="mailto:aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
-        <p><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small></p> 
+        <h3><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small> </h3> 
     </footer>
 </body>
 </html>
