--- a/aaronrdzr/paginaweb2/index.html
+++ b/aaronrdzr/paginaweb2/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>PRACTICA 3</h1>
+        <h1 class="encabezado2">PRACTICA 3</h1>
     </header>
     <main>
-       <h2>Pasatiempos</h2>
-        <nav>
-            <p>Soy Aaron Rodriguez Rosas y esto me gusta hacer en mi tiempo libre.</p>
+       <h2 class="encabezado2">Pasatiempos</h2>
+        <nav id="principal">
+            Soy Aaron Rodriguez Rosas y esto me gusta hacer en mi tiempo libre.
         </nav>
 
        
@@ -45,7 +45,7 @@
     <footer> 
         <hr>
         <small><a href="mailto:aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
-        <p><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small></p> 
+        <h3><small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</small> </h3> 
     </footer>
 
 </body>
