Selector por ID y por clase

--- a/victoriabalderas/selectores/index.html
+++ b/victoriabalderas/selectores/index.html
@@ -6,16 +6,16 @@
     <title>Practica 5</title>
 </head>
 <body>
-    <header></header>
+    <header><h1>Práctica 5 - Selectores CSS</h1></header>
     <main>
         <section>
             <header> 
                 <h2>Selector Universal</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="s_universal.png" alt="Código en css" width="450" height="80">
+            <img src="capturas/s_universal.png" alt="Código en css" width="450" height="80">
             <h3>Resultado en HTML</h3>
-            <img src="r_selectoruniversal.png" alt="Resultado en HTML" width="800" height="300">
+            <img src="capturas/r_selectoruniversal.png" alt="Resultado en HTML" width="800" height="300">
         </section>
         <hr>
         
@@ -24,9 +24,9 @@
                 <h2>Selector de tipo</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="s_tipo.png" alt="Código en CSS">
+            <img src="capturas/s_tipo.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="r_selectortipo.png" alt="Resultado en HTML">
+            <img src="capturas/r_selectortipo.png" alt="Resultado en HTML">
         </section>
         <hr>
 
@@ -35,9 +35,9 @@
                 <h2>Selector por ID</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_id.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_selectorid.png" alt="Resultado en HTML">
         </section>
         <hr>
 
@@ -46,9 +46,9 @@
                 <h2>Selector por clase</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_clase.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_selectorclase.png" alt="Resultado en HTML">
         </section>
         <hr>
 
