--- a/victoriabalderas/pasatiemposver2/pagina1.html
+++ b/victoriabalderas/pasatiemposver2/pagina1.html
@@ -30,7 +30,7 @@
                         <h2>Mis primeros años</h2>
                     </header>
                     <p>Cuando tenía apenas 3 años entré a clases sabatinas de baby ballet. Me <i>encantaba</i> ir con mis zapatillas, leotardo y mallas. Poco a poco fui tomando más confianza, por lo que además de ballet hacía jazz y folklore español. Participé en varios recitales de mi academia y <i>me <b>enamoré</b> de los escenarios.</i> </p>
-                    <img class="imgdanza" src="img/danza1.jpeg" alt="Niña vestida de bailarina">
+                    <img class="imgdanza" src="img/danza1.jpeg" alt="Niña vestida de bailarina" width="200px" height="300px">
                 </section>
 
                 <section>
@@ -38,7 +38,7 @@
                         <h2>Parte de mi vida</h2>
                     </header>
                     <p>Aunque dejé de asistir a una academia de danza como tal, siempre me gustó practicar en casa. Junto con mi hermana menor montábamos coreografías en la sala de nuestra casa para fechas especiales, disfrutábamos de bailar al ritmo de cualquier tipo de canción, además de tocar los distintos instrumentos que mi papá tenía en su colección. Desde pequeña aprendí que la música y la danza eran parte vitales de mi desarrollo. Actualmente me encanta programar al ritmo de una buena canción. </p>
-                    <img class="imgdanza" src="img/danza2.jpeg" alt="Foto familiar">
+                    <img class="imgdanza" src="img/danza2.jpeg" alt="Foto familiar" width="200px" height="300px">
                 </section>
 
                 <section>
@@ -46,7 +46,7 @@
                         <h2>La danza en la actualidad</h2>
                     </header> 
                     <p>Gracias al departamento de arte y cultura y a <i>Miss Majo</i> por abrir el taller de danza urbana &hearts;, pude retomar mi pasatiempo favorito, para mí es liberedor bailar, sentir la música y presentarme en un escenario. El próximo mes cumplo un año dentro del taller y me siento muy orgullosa de mi crecimiento tanto personal como bailarina. </p>
-                    <img src="img/urbano.jpeg" alt="Foto de un grupo de baile en un escenario" width="450px" height="300px">
+                    <img class="imgdanza" src="img/urbano.jpeg" alt="Foto de un grupo de baile en un escenario" width="450px" height="300px">
                 </section>
             </article>
         </main>
