--- a/victoriabalderas/pasatiemposver2/pagina2.html
+++ b/victoriabalderas/pasatiemposver2/pagina2.html
@@ -36,7 +36,7 @@
                         <h2>Artistas</h2>
                     </header>
                     <p>Es casi imposible para mi decidir, pero entre mis artistas preferidos se encuentran <i> KATSEYE, Sabrina Carpenter, Bad Bunny, Kendrick Lamar, Big Time Rush y The Weeknd. Mi hit del momento es este anuncio de KATSEYE para la marca GAP. &hearts;</i></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IwzF26o0AuU?si=oIbFnMtXEs3vjA1C&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IwzF26o0AuU?si=oIbFnMtXEs3vjA1C&amp;start=3" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe>
                 </section>
                 
                 <section>
@@ -46,18 +46,18 @@
                     <p>A continuación les presento mi top 5 de canciones favoritas del mes:</p>
                     <ul>
                         <li>1. TV OFF - KENDRICK LAMAR</li><br>
-                        <img class="portadamusica" src="https://i1.sndcdn.com/artworks-y6WaHzlvp7PbwkLT-JlZicw-t500x500.png" alt="Portada de la canción de Kendrick Lamar" width="300px" height="300px">
+                        <img id="portadamusica" src="https://i1.sndcdn.com/artworks-y6WaHzlvp7PbwkLT-JlZicw-t500x500.png" alt="Portada de la canción de Kendrick Lamar" width="300px" height="300px">
                         <br>
                         <li>2. GABRIELA - KATSEYE</li><br>
-                        <img class="portadamusica" src="https://linkstorage.linkfire.com/medialinks/images/602d6eb6-3306-44c4-9e72-605743fc0b09/artwork-440x440.jpg" alt="Portada de la canción de KATSEYE" width="300px" height="300px"><br>
+                        <img id="portadamusica" src="https://linkstorage.linkfire.com/medialinks/images/602d6eb6-3306-44c4-9e72-605743fc0b09/artwork-440x440.jpg" alt="Portada de la canción de KATSEYE" width="300px" height="300px"><br>
                         <li>3. PUMP IT - BLACK EYED PEAS</li><br>
-                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b273c6710b4a52539506c30e5354" alt="Portada de la canción de Black Eyed Peas" width="300px" height="300px">
+                        <img id="portadamusica" src="https://i.scdn.co/image/ab67616d0000b273c6710b4a52539506c30e5354" alt="Portada de la canción de Black Eyed Peas" width="300px" height="300px">
                         <br>
                         <li>4. THUNDERSTRUCK - AC/DC</li><br>
-                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2738399047ff71200928f5b6508" alt="Portada de la canción de ACDC" width="300px" height="300px">
+                        <img id="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2738399047ff71200928f5b6508" alt="Portada de la canción de ACDC" width="300px" height="300px">
                         <br>
                         <li>5. LATINA FOREVA - KAROL G</li><br>
-                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2732bcae9fa5d95c564ddcaea00" alt="Portada de la canción de Karol G" width="300px" height="300px">
+                        <img id="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2732bcae9fa5d95c564ddcaea00" alt="Portada de la canción de Karol G" width="300px" height="300px">
                     </ul>
                 </section>
             </article>
