Agrego resto de selectores completos

--- a/Bejesusrey/pasatiemposV2/pagina2.html
+++ b/Bejesusrey/pasatiemposV2/pagina2.html
@@ -20,8 +20,9 @@
             <h2>Deportes</h2>
         </header>
         
-        <p>Los deportes han sido parte de mi vida desde que era un niño, pues siempre todos los dias salia a jugar futbol a la plaza con mi papa y amigos</p>
-        <p>Actualmente puedo comprender los beneficioso que fue para mi el hacer todos los dias deporte cuando era pequeño, porque ahora se que es lo que me ayuda a poder tener energia todos los dias y estar en forma</p>
+        <p class="s91">Los deportes han sido parte de mi vida desde que era un niño, pues siempre todos los dias salia a jugar futbol a la plaza con mi papa y amigos</p>
+        <p class="s92">Actualmente puedo comprender los beneficioso que fue para mi el hacer todos los dias deporte cuando era pequeño, porque ahora se que es lo que me ayuda a poder tener energia todos los dias y estar en forma</p>
+        <p class="s93">Ademas que es divertido cuando lo practicas con tu hermano como en mi caso.</p>
 
         <figure>
             <img width="200" src="https://images.pexels.com/photos/1171084/pexels-photo-1171084.jpeg" alt="Futbol">
