--- a/Bejesusrey/pasatiemposV2/pagina4.html
+++ b/Bejesusrey/pasatiemposV2/pagina4.html
@@ -14,19 +14,21 @@
     <header>
         <h1><strong>&#127869;<span class="resaltar4">Arte Culinario</span></strong></h1>
     </header>
-    <main>
+    <main id="s10">
 
         <header>
             <h2>Cocinar y Hacer Postres</h2>
         </header>
         <p>Desde que me propuse a mejorar mi alimentracion, eh cocinado mis comidas ya que podia controlar las calorias en mi platillo.Ademas me di cuenta de lo divertido que es cocinar y aun mas si cocino para mi familia y amigos.<br>Tambien me gusta prepara postres, uno de mis favoritos es el <b>pay de limon &hearts;</b></p>
+        <p>Tambien por ser regiomontano es muy de mi gusto hacer carnita asada en ocasiones especiales.</p>
+        <p>Un datos adicional es que me encanta tomar las bebidas frias, no importa si es epoca de invierno, incluso me gusta mas el cafe frio.</p>
         
         <video loop controls autoplay width="200" height="200" src="https://www.pexels.com/es-es/download/video/3781733/">Video Ilustrativo</video>
         <p><i>Me es divertido cocinar junto a mi mama &hearts;</i></p>
 
     </main>
     
-    <aside>
+    <aside id="s7">
         <p><b>Hago una lista de mis platillos favoritos</b></p>
         <ol>
             <li>Entomatadas</li>
