--- a/Bejesusrey/pasatiemposV2/pagina5.html
+++ b/Bejesusrey/pasatiemposV2/pagina5.html
@@ -14,7 +14,7 @@
     <header>
         <h1><strong>&#127926;<span class="resaltar5">Tocar Musica</span></strong></h1>
     </header>
-    <main>
+    <main id="s8">
         <header>
             <h2>Tocar Guitarra</h2>
         </header>
