--- a/Bejesusrey/SelectoresCss/index.html
+++ b/Bejesusrey/SelectoresCss/index.html
@@ -22,81 +22,73 @@
 
         <section>
             <h3>Selector de Tipo</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector2css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector2result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector por ID</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector3css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector3result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector por Clase</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector4css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector4result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector de Atributo</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector5css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector5result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector de Lista</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector6css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector6result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector de Descendientes</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector7css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
-        </section>
-        <hr>
-
-        <section>
-            <h3>Selector Universal</h3>
-            <img src="" alt="">
-            <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector7result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector Hijos Directos</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector8css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector8result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector Hermano Adyacente</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector9css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector9result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
         <section>
             <h3>Selector Hermano General</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector10css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img src="imgselectores/selector10result.png" alt="Imagen del resultado">
         </section>
     </main>
 
