--- a/Bejesusrey/pasatiemposV2/pagina3.html
+++ b/Bejesusrey/pasatiemposV2/pagina3.html
@@ -23,13 +23,13 @@
         <p>Los videojuegos han formado parte de mi vida desde que me regalaron mi primera consola portatil que fue una <abbr title="Play Station Portable">PSP</abbr>.</p>
         <p>A lo largo de los años eh tenido varias consolas como:</p>
         <ul>
-            <li>PSP</li>
+            <li id="s61">PSP</li>
             <li>Game Cube</li>
             <li>Play Station 2</li>
             <li>Play Station 3</li>
             <li>Wii U</li>
             <li>Switch</li>
-            <li>Play Station 5</li>
+            <li id="s62">Play Station 5</li>
         </ul>
         
     </main>
