--- a/caroocaast/paginaweb.2/paginacaro4.html
+++ b/caroocaast/paginaweb.2/paginacaro4.html
@@ -38,7 +38,7 @@
   
 
         </section>
-        <p> Me gusta pasar tiempo de calidad con mi familia, novio y amigos me gusta salir con ellos, casi no tengo amigos tengo demasiados conocidos 
+        <p id="Parrafo"> Me gusta pasar tiempo de calidad con mi familia, novio y amigos me gusta salir con ellos, casi no tengo amigos tengo demasiados conocidos 
             pero amigos amigos no.
         </p>
        
