Selector de tipo

--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -23,9 +23,9 @@
 
             <section>
                 <h3>Selector de tipo</h3>
-                <img src="" alt="">
+                <img width="400" height="350" src="img/img3.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img width="1200" height="250" src="img/img4.jpeg" alt="">
             </section>
 
             <section>
