--- a/IlseOjeda/pasatiemposv2/correr.html
+++ b/IlseOjeda/pasatiemposv2/correr.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <article>
-      <section>
+      <section id="correr-info">
         <p>El running o <b>salir a correr</b> es una actividad eminentemente aeróbica, donde un buen sistema cardiorespiratorio va a favorecer la capacidad para correr. Hábitos nocivos como fumar o beber alcohol repercuten negativamente es la capacidad de nuestro organismo para mantener un esfuerzo prolongado.
         </p>
         <p>El running aporta beneficios físicos como la mejora cardiovascular y ósea, el control del peso, y el fortalecimiento muscular, además de ventajas mentales que incluyen la reducción del estrés y la ansiedad, la mejora del ánimo y de la función cerebral, y una mayor calidad de sueño y concentración. También promueve la conexión social y genera una sensación de libertad y logro personal. 
