--- a/IlseOjeda/Practica 5/index.html
+++ b/IlseOjeda/Practica 5/index.html
@@ -12,63 +12,54 @@
     </header>
 
     <section>
-        <h2>Selector universal (*)</h2>
-        <p>Este párrafo se verá afectado por el selector universal.</p>
+        <h2>Selector universal</h2>
+        <p>Se utiliza para seleccionar todos los elementos de una página web, aplicando estilos a todos ellos simultáneamente.</p>
+        <img src="img/universal.png" alt="">
     </section>
     <section>
-        <h2>Selector de tipo (h2)</h2>
-        <p>Todos los H2 tienen un estilo definido en el CSS.</p>
-    </section>
-    <section id="s1">
-        <h2>Selector por ID (#s1)</h2>
-        <p>Este bloque tiene un estilo único por su ID.</p>
+        <h2>Selector de tipo</h2>
+        <p>Selecciona y estiliza todos los elementos HTML de un tipo específico, simplemente usando el nombre de esa etiqueta HTML.</p>
+        <img src="img/tipo.png" alt="">
     </section>
     <section>
-        <h2>Selector por clase (.bonito)</h2>
-        <aside class="bonito"><p>Este aside tiene la clase "bonito".</p></aside>
-        <footer class="bonito"><p>Este footer también tiene la clase "bonito".</p></footer>
+        <h2>Selector por ID</h2>
+        <p>Es una forma de apuntar a un elemento HTML específico y único dentro de una página web, utilizando su atributo id. </p>
+        <img src="img/id.png" alt="">
     </section>
-    <section id="s2">
+    <section>
+        <h2>Selector por clase</h2>
+        <p>Sirve para aplicar el mismo estilo a múltiples elementos, incluso de diferentes tipos, promoviendo la reutilización de estilos y la organización del código. </p>
+        <img src="img/clase.png" alt="">
+    </section>
+    <section>
         <h2>Selector de atributo</h2>
-        <a href="https://www.emp.com.mx" target="_blank">Ir a Empresa</a><br>
-        <a href="https://www.youtube.com" target="_blank">Ir a YouTube</a><br>
-        <a href="#s1">Ir al selector por ID</a>
-    </section>
-    <section id="s4">
-        <h2>Selector de lista (h2, p, li)</h2>
-        <ol>
-            <li>Uno</li>
-            <li>Dos</li>
-            <li>Tres</li>
-        </ol>
-        <ul>
-            <li>Cuatro</li>
-            <li>Cinco</li>
-            <li>Seis</li>
-        </ul>
+        <p>Permite aplicar estilos a elementos HTML basándose en la presencia o en el valor específico de sus atributos.</p>
+        <img src="img/atributo.png" alt="">
     </section>
     <section>
-        <h2>Selector de descendientes (div p)</h2>
-        <div>
-            <p>Este párrafo está dentro de un div y será afectado.</p>
-        </div>
-    </section>
-    <section id="s3">
-        <h2>Selector de hijos directos (section > h2)</h2>
-        <h2>Hijo directo</h2>
-        <footer><h2>Pie dentro de footer</h2></footer>
-        <h2>Otro hijo directo</h2>
+        <h2>Selector por lista</h2>
+        <p>Forma de aplicar un mismo estilo a varios elementos diferentes a la vez, separando los selectores individuales con comas.</p>
+        <img src="img/lista.png" alt="">
     </section>
     <section>
-        <h2>Selector hermano adyacente (h2 + p)</h2>
-        <h2>Encabezado</h2>
-        <p>Este párrafo es hermano adyacente de un H2.</p>
+        <h2>Selector de descendientes</h2>
+        <p>Permite seleccionar un elemento (o varios) que se encuentra dentro de otro elemento, sin importar cuán profunda sea la relación de descendencia o anidación.</p>
+        <img src="img/descendientes.png" alt="">
     </section>
     <section>
-        <h2>Selector hermano general (h2 ~ p)</h2>
-        <h2>Encabezado</h2>
-        <p>Este párrafo es hermano general de un H2.</p>
-        <p>Este también.</p>
+        <h2>Selector de hijos directos</h2>
+        <p>Permite estilizar solo los elementos que son hijos inmediatos de otro elemento, distinguiéndolos de los nietos u otros descendientes.</p>
+        <img src="img/hijos directos.png" alt="">
+    </section>
+    <section>
+        <h2>Selector hermano adyacente</h2>
+        <p>Aplica estilos al elemento que sigue inmediatamente a otro elemento especificado y que comparten el mismo elemento padre.</p>
+        <img src="img/hermano adyacente.png" alt="">
+    </section>
+    <section>
+        <h2>Selector hermano general</h2>
+        <p>Selecciona todos los elementos hermanos de un elemento específico, que son hijos del mismo padre y aparecen después de ese elemento en el código HTML, sin importar si están o no inmediatamente adyacentes.</p>
+        <img src="img/hermano general.png" alt="">
     </section>
 
     <footer> 
