Selector por ID y Clase

--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -30,16 +30,16 @@
 
             <section>
                 <h3>Selector por id</h3>
-                <img src="" alt="">
+                <img width="400" height="350" src="img/img5.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img width="1200" height="250" src="img/img6.jpeg" alt="">
             </section>
             
             <section>
                 <h3>Selector por clase</h3>
-                <img src="" alt="">
+                <img src="img/img7.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img src="img/img8.jpeg" alt="">
             </section>
 
             <section>
