--- a/ernesgarcia06/pasatiemposver2/pagina1.html
+++ b/ernesgarcia06/pasatiemposver2/pagina1.html
@@ -12,23 +12,25 @@
     <header id="t01">
         <h1>🎮Videojuegos favoritos🎮</h1>
     </header>
-    <main >
-        <p class="menu-pag"><span style="font-size: 30px;"><mark>EAFC</mark></span></p>
+    <main>
+        <hr>
+        <p class="menu-pag"><span style="font-size: 30px;">EAFC</span></p>
           <article>
             <section>
                 <header>
-                        <p>Antes solo me gustaba jugar FIFA, que a partir del 2024 cambio de nombre a <strong>EAFC</strong>, y en el cual podía pasar muchas horas jugando al dia sin aburrirme.</p>
+                        <p>Antes solo me gustaba jugar <mark>FIFA</mark>, que a partir del 2024 cambio de nombre a <strong>EAFC</strong>, y en el cual podía pasar muchas horas jugando al dia sin aburrirme.</p>
                         <p>Mi colección empieza en FIFA 11 que fue el primero que jugue, después dure un tiempo sin comprarlos y algunos años después compre el FIFA 14, el año siguiente el 15 y a partir del FIFA 18 tengo hasta el ahora llamado <strong>EAFC 25</strong> sin que falte alguno.</p>
                         <div class="videos">
                             <div id="img1">
                                 <img src="img/fifa.jpg" alt="Persona jugando un videojuego">
-                                <p>Persona jugando</p>
+                                <p>Persona jugando un videojuego</p>
                             </div>
                         </div>
                 </header>
             </section>  
           </article>
-          <p class="menu-pag"><span style="font-size: 30px;"><mark><abbr title="Major League Baseball">MLB</abbr> THE SHOW</mark></span></p>
+          <hr>
+          <p class="menu-pag"><span style="font-size: 30px;"><abbr title="Major League Baseball">MLB</abbr> THE SHOW</span></p>
           <article>
             <section>
                 <header>
