--- a/ernesgarcia06/pasatiemposver2/pagina3.html
+++ b/ernesgarcia06/pasatiemposver2/pagina3.html
@@ -13,15 +13,16 @@
         <h1 class="titulos">🎵Música Favorita🎵</h1>
     </header>
     <main >
-        <p class="menu-pag"><span style="font-size: 30px;"><mark><i>Gustos</i></mark></span></p>
+        <hr>
+        <p class="menu-pag"><span style="font-size: 30px;"><i>Gustos</i></span></p>
           <article>
             <section>
                 <header>
                     <p>En cuanto a la música no me gusta un género en especial, tengo gustos variados y dependiendo el momento y como me sienta es el tipo de música que escucho, me gusta la banda, los corridos, el pop y algo de reggaeton.</p>
                     <p>Principalmente me gusta escuchar música mientras hago tarea o cuando tengo tiempo libre.</p>
-                    <div class="imagenes">
+                    <div class="videos">
                         <img src="img/musica.jpg" alt="Persona eligiendo música">
-                        <p><small>Persona eligiendo música</small></p>
+                        <small>Persona eligiendo música</small>
                     </div>
                 </header>
             </section>  
