--- a/ernesgarcia06/pasatiemposver2/pagina4.html
+++ b/ernesgarcia06/pasatiemposver2/pagina4.html
@@ -13,7 +13,8 @@
         <h1 class="titulos">👨‍👩‍👧‍👦Paseos👨‍👩‍👧‍👦</h1>
     </header>
     <main >
-        <p class="menu-pag"><span style="font-size: 30px;"><mark><i>Estadios</i></mark></span></p>
+        <hr>
+        <p class="menu-pag"><span style="font-size: 30px;"><i>Estadios</i></span></p>
         <article>
             <section>
                 <header>
@@ -39,9 +40,9 @@
                     </div>
                 </header>
             </section>  
-        <hr>
         </article>
-        <p class="menu-pag"><span style="font-size: 30px;"><mark><i>Compras</i></mark></span></p>
+        <hr>
+        <p class="menu-pag"><span style="font-size: 30px;"><i>Compras</i></span></p>
         <article>
             <section>
                 <header>
@@ -51,7 +52,7 @@
         </article>
     </main>
     <nav>
-        <div class="imagenes">
+        <div class="videos">
             <img src="img/newera.jpg" alt="Tienda New Era">
             <p>Si gustas comprar algo de gorras te recomiendo ir a <cite><a href="https://www.newera.mx/" target="_blank">NEW ERA</a></cite></p>
         </div>
