--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -41,7 +41,7 @@
                 </tr>
             </tbody>
         </table>
-        <div class="imagenes">
+        <div>
             <p><span style="font-size: 25px;">¿Ahora que sabes esto, quisieras acompañarme al estadio?</span></p>
         </div>
 
