--- a/ernesgarcia06/selectores/index.html
+++ b/ernesgarcia06/selectores/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Selectores</title>
 </head>
-<body>
-    <header class="titulo">
-        <a href="https://fdw52ad2025.github.io/website52/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
-        <h1>Selectores</h1>
+<body class="fondo">
+    <a href="https://fdw52ad2025.github.io/website52/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
+    <header class="titulos">
+        <h1><span style="font-size: 45px;">Selectores</span></h1>
     </header>
     <main>
         <section>
@@ -29,7 +30,7 @@
                 <h2>Selector de Tipo.</h2>
             </header>
             <h3>Código CSS</h3>
-            <p>Al h1 que esta dentro del elemnto con ID t01 se le aplicará el siguiente estilo: </p>
+            <p>Al h1 que esta dentro del elemento con ID t01 se le aplicará el siguiente estilo: </p>
             <img width="500px" src="img/selectorDeTipo.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
@@ -68,10 +69,11 @@
                 <h2>Selector por atributo.</h2>
             </header>
             <h3>Código CSS</h3>
+            <p>A todas las imágenes que tengan src se le aplicará el siguiente estilo:</p>
             <img src="img/selectorAtributo.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="img/resultado_SelectorAtributo.jpg" alt="Resultado HTML">
+            <img width="520px" src="img/resultado_SelectorAtributo.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -80,10 +82,11 @@
                 <h2>Selector de lista.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="Codigo CSS">
+            <p>A todos los footer y address les aplica el siguiente estilo:</p>
+            <img src="img/selectorLista.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="Resultado HTML">
+            <img width="680px" src="img/resultado_SelectorLista.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -92,10 +95,11 @@
                 <h2>Selector de descendientes.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <p>A todos los "p" que esten dentro de header justificará el texto.</p>
+            <img src="img/selectorDescendiente.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width="750px" src="img/resultado_selectorDescendiente.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -104,10 +108,11 @@
                 <h2>Selector hijos directos.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <p>A los "li" que esten denro de un ul les aplicará el siguiente estilo:</p>
+            <img src="img/selectorHijoDirecto.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img src="img/resultado_SelectorHijoDirecto.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -116,10 +121,11 @@
                 <h2>Selector hermano adyacente.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <p>A las "p" que esten inmediatamente después de un "hr" les aplicará el siguiente diseño:</p>
+            <img src="img/selectorHermanoAdyacente.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width="720px" src="img/Resultado_SelectorHermanoAdyacente.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -128,10 +134,11 @@
                 <h2>Selector hermano general.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <p>A los "div" que esten depués de la tabla los alineara al centro.</p>
+            <img src="img/SelectorHermanoGeneral.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width="800px" src="img/resultado_SelectorHermanoGeneral.jpg" alt="Resultado HTML">
         </section>
     </main>
     <footer><address>&copy;Desarrollado por Luis Ernesto Guzmán García</address></footer>
