--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -58,9 +58,9 @@
 
             <section>
                 <h3>Selector de descendientes</h3>
-                <img src="" alt="">
+                <img src="img/img13.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img src="img/img14.jpeg" alt="">
             </section>
 
             <section>
