--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -94,7 +94,7 @@
                     <h4>Enlaces de GitHub:</h4>
                     <ul>
                         <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/selectores_css/index.html">LINK A LA PAGINA DE LOS SELECTORES EN CSS DE LA V2 DE "MIS PASATIEMPOS"</a></li>
-                        <li><a target="_blank" href="">LINK DE LOS COMMITS (No está listo)</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-08&until=2025-09-10&author=Hugo-0699">LINK DE LOS COMMITS</a></li>
                     </ul>
                     <hr>
                 </nav>
