Modificación de la estructura de la práctica 5

--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -12,8 +12,8 @@
         <h1>&star; SELECTORES EN CSS &star;</h1>
     </header>
     <hr>
-    <main class="mainprincipal">
-        <article>
+    <main>
+        <article class="articuloselector">
             <section class="sectionselector">
                 <h3>Selector Universal</h3>
                 <img src="img_selectores/s_universal.png" alt="">
@@ -27,17 +27,14 @@
             <section class="sectionselector">
                 <h3>Selector por ID</h3>
                 <img src="img_selectores/s_id.png" alt="">
-                <img src="img_selectores/s_id2.png" alt="">
                 <img src="img_selectores/s_id1.png" alt="">
+                <img src="img_selectores/s_id2.png" alt="">
                 <img src="img_selectores/s_id3.png" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Clases</h3>
                 <img src="img_selectores/s_clase.png" alt="">
                 <img src="img_selectores/s_clase2.png" alt="">
-            </section>
-            <section class="sectionselector">
-                <h3>Selector por Clase con tag particular</h3>
             </section>
             <section class="sectionselector">
                 <h3>Selector por Atributo</h3>
@@ -65,4 +62,3 @@
         </address>
     </footer>
 </body>
-     
