--- a/victoriabalderas/selectores/index.html
+++ b/victoriabalderas/selectores/index.html
@@ -79,9 +79,9 @@
                 <h2>Selector de descendientes</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_descendiente.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_selectordescendiente.png" alt="Resultado en HTML">
         </section>
         <hr>
 
