Se completa la página de selectores

--- a/MiguelABanda/PaginaSelectores/index.html
+++ b/MiguelABanda/PaginaSelectores/index.html
@@ -50,31 +50,34 @@
     <h3>Codigo css</h3>
     <img src="codigo_css_selector_delista.png" alt="">
     <h3>Resultado</h3>
-    <img src="" alt="">
+    <p>Aqui podemos darnos cuenta que en codigo css, el selector lista tiene dos elementos "h2 y th" esto quiere decir que estas etiquetas tendran el formato que esta en el codigo css, en el ejemplo de resultado el texto "Equipos Favoritos" es un h2 y los textos, "Equipo, Escudo e Historia del Club" son un th y por lo mismo tienen el mismo formato </p>
+    <img src="resultado_delista.png" alt="">
 
     <h2>Selector de descendientes</h2>
     <h3>Codigo css</h3>
     <img src="codigo_css_selector_descendiente.png" alt="">
     <h3>Resultado</h3>
-    <img src="" alt="">
+    <img src="resultado_descendiente.png" alt="">
 
     <h2>Selector hijos directos</h2>
     <h3>Codigo css</h3>
     <img src="codigo_css_selector_hijosdirectos.png" alt="">
     <h3>Resultado</h3>
-    <img src="" alt="">
+    <img src="resultado.png" alt="">
 
     <h2>Selector hermano adyacente</h2>
     <h3>Codigo css</h3>
     <img src="codigo_css_selector_deadyacentes.png" alt="">
     <h3>Resultado</h3>
-    <img src="" alt="">
+    <p>En este caso lo que quiere decir el código css es que cualquier tabla que este inmediatamente despues de un h2 tendra el formato que se programo en este caso tendra un borde azul.</p>
+    <img src="resultado.png" alt="">
 
     <h2>Selector hermano general</h2>
     <h3>Codigo css</h3>
     <img src="codigo_css_selector_hermanogeneral.png" alt="">
     <h3>Resultado</h3>
-    <img src="" alt="">
+    <p>Selecciona todos los párrafos (p) que sean hermanos de un h2 y que estén después de él en el mismo nivel</p>
+    <img src="Resultado_ultimo.png" alt="">
 
 
     
