--- a/MiguelABanda/pasatiempos2/deportes.html
+++ b/MiguelABanda/pasatiempos2/deportes.html
@@ -32,6 +32,9 @@
         <img width="200px" src="yochiquito.jpg" alt="Foto de niño">
 
         <p>Actualmente ya solo lo juego por diversión, por pasar el rato pero hubo una época entre los 12 a 16 años donde si lo aspiraba a un futuro a dedicarme a esto de grande, pero después de pandemia en cuestión de deportes no volvió a ser lo mismo y decidí dejar ese "sueño" y estudiar algo en lo cuál hubiera futuro. .</p>
+        
+        <h2>Imagen mia actual</h2>
+        <p>Diciembre del 2024</p>
         <img width="400px" src="yogrande.jpg" alt="Foto de grande">
         <hr>
 
