--- a/TheRafaMan06/pasatiemposver2/index.html
+++ b/TheRafaMan06/pasatiemposver2/index.html
@@ -42,7 +42,7 @@
     
     <main>
         <h2>Contenido Principal</h2>
-        <p>Selecciona una de las categorías disponibles en el menú de navegación para explorar el contenido de tu interés.</p>
+        <p id="p1">Selecciona una de las categorías disponibles en el menú de navegación para explorar el contenido de tu interés.</p>
         <br>
         <p>Cada sección contiene información especializada y actualizada sobre el tema seleccionado.</p>
         <br>
