--- a/diegoalgosa/Pasatiempos2/GYM.html
+++ b/diegoalgosa/Pasatiempos2/GYM.html
@@ -33,6 +33,10 @@
     </aside>
   </main>
 
+  <section id="s1">
+    <p>lets go</p>
+  </section>
+
   <footer><p><cite>Viva el gym</cite></p></footer>
 </body>
 </html>
