--- a/diegoalgosa/Pasatiempos2/AMIGOS.html
+++ b/diegoalgosa/Pasatiempos2/AMIGOS.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header><h1>Salir con Amigos</h1></header>
+  <h2>Buena vida</h2>
 
   <nav><a href="index.html">Volver al inicio</a></nav>
 
