Se edita index personal

--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -38,6 +38,33 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/MiguelABanda/pasatiempos2?since=2025-08-27&until=2025-08-28">Link de los Commit del 27 de agosto al 29 de agosto</a></li>
         </ul>
 
+        <h1>Pratica 4</h1>
+        <p>Aplicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
+        <ul>
+            <li> Link de los commit de actividad: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=MiguelABanda&since=2025-09-01&until=2025-09-03"> Link commit </a></li>
+        </ul>
+
+        <h1>Practica 5</h1>
+        <p>Utilizando sus archivos HTML sobre sus pasatiempos versión 2. Crear un sitio donde se muestre por lo menos un ejemplo de cada selector CSS.</p>
+
+        <li>Selector universal</li>
+        <li>Selector de tipo</li>
+        <li>Selector por ID</li>
+        <li>Selector por clase</li>
+        <li>Selector de atributo</li>
+        <li>Selector de lista</li>
+        <li>Selector de descencientes</li>
+        <li>Selector hijos directos</li>
+        <li>Selector hermano adyacente</li>
+        <li>Selector de hermano general</li>
+        <ul>
+
+            <li> <a href="https://miguelabanda.github.io/paginaselectores/"> Página Selectores</a>  </li> 
+
+            <li> <a href="https://github.com/FDW52AD2025/website52/commits/main/MiguelABanda/PaginaSelectores?since=2025-09-08&until=2025-09-10"> Link commits </a></li>
+        </ul>
+
+
     
     </main>
     <aside></aside>
